<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:example="http://schemas.android.com/apk/res/com.ti.sensortag" >
    
    <PreferenceCategory android:title="Device" >
        <EditTextPreference
            android:key="@string/headgear_device_name"
            android:summary="The name of person wearing the device"
            android:defaultValue="Edwin"
            android:persistent="true"
            android:inputType="text"
            android:title="Name" />
        <EditTextPreference
            android:key="@string/smsAlertPhoneNumber"
            android:summary="Send SMS notifications to this phone number"
            android:defaultValue=""
            android:persistent="true"
            android:inputType="phone"
            android:title="Phone Number" />
        <EditTextPreference
            android:key="@string/sampling_frequency"
            android:summary="Motion sensor sampling frequency [milliseconds]."
            android:defaultValue="10"
            android:persistent="true"
            android:title="Sampling Frequency" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Algorithm" >
        <EditTextPreference
            android:key="@string/keep_track_level"
            android:summary="keep track of any shock above acceleration"
            android:defaultValue="100"
            android:persistent="true"
            android:title="Keep-Track [g]" />
        <com.whitespider.impact.util.HeadgearEditTestPreference
            android:key="@string/yellow_minor_shock"
            android:summary="keep track of any shock above this acceleration"
            android:defaultValue="210"
            android:persistent="true"
            android:title="yellow"
            />
        <com.whitespider.impact.util.HeadgearEditTestPreference
            android:key="@string/orange_medium_shock"
            android:summary="keep track of any shock above this acceleration"
            android:defaultValue="220"
            android:persistent="true"
            android:title="orange" />
        <com.whitespider.impact.util.HeadgearEditTestPreference
            android:key="@string/red_important_shock"
            android:summary="keep track of any shock above this acceleration"
            android:defaultValue="230"
            android:persistent="true"
            android:title="red" />
        <com.whitespider.impact.util.HeadgearEditTestPreference
            android:key="@string/purple_severe_shock"
            android:summary="keep track of any shock above this acceleration"
            android:defaultValue="240"
            android:persistent="true"
            android:title="purple" />
    </PreferenceCategory>
    
</PreferenceScreen>
