<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.whitespider.impact.ble.sensortag.HeadGearActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="fill_parent"
        android:layout_height="50dp" />

    <com.github.mikephil.charting.charts.LineChart
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/line_chart"
            android:layout_below="@+id/section_label"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true" android:textAlignment="viewStart"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_above="@+id/xyzAcceleration"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="25dp">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="110dp"
                    android:layout_height="25dp" android:background="@android:color/black">
                <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:id="@+id/scheduleImageView"
                        android:src="@drawable/ic_schedule_black_18dp"
                        android:contentDescription="@string/content_description"
                        android:padding="5dp" android:scaleType="fitXY"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/concussionTimeTextView"
                        android:gravity="center"
                        android:singleLine="true" android:text="@string/sample_concussion_event_time"
                        android:textColor="#fd1535"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="200dp"
                    android:layout_height="match_parent">
                <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:id="@+id/errorImageView"
                        android:src="@drawable/ic_error_black_18dp"
                        android:scaleType="fitXY" android:contentDescription="@string/erroro_image_content_description"
                        android:padding="5dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/high_concussion_event_text"
                        android:id="@+id/concussionHighHit"
                        android:background="@android:color/transparent"
                        android:textAlignment="center"
                        android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/concussionMagnitudeTextView"
                android:textSize="90sp"
                android:textIsSelectable="false"
                android:singleLine="true"
                android:text="@string/sample_g_value"
                android:background="@android:color/black"
                android:gravity="center"
                android:textStyle="italic" android:textColor="#fd1535"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/xyzAcceleration"
        android:layout_alignBottom="@+id/line_chart"
        android:layout_toEndOf="@+id/section_label" />

</RelativeLayout>
